--- a/css/style.css
+++ b/css/style.css
@@ -27,11 +27,9 @@ aside {
 
 h1 {
 
-	margin-top: 10px;
-	text-align: center;
+		margin-top: auto;
+		text-align: center;
+		border: 1px solid black;
 
 }
 
-#modal {
-	
-}
