--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,7 @@ aside {
 	float: left;
 
 }
-
 	
-
 h1 {
 
 		margin-top: auto;
@@ -32,4 +30,46 @@ h1 {
 		border: 1px solid black;
 
 }
+
+
+h3  {
+	margin-top: auto;
+	margin-bottom: 15px;
+	
+}
+
+h4 {
+	margin-top: auto;
+	padding: none;
+	
+}
+
+ #player-one {
+
+	height: 75px;
+	background-color: red;
+	border-bottom: 1px solid black;
+	
+}
+
+#player-two {
+	height: 75px;
+	background-color: blue;
+	border-bottom: 1px solid black;
+
+}
+
+section	{
+	height: 100px;
+	background-color: grey;
+	border: 1px solid black;
+	width: 100px;
+	display: inline-block;
+	float: left;
+	margin-left: 20px;
+	margin-top: 100px;
+}
+
+
+
 
