--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ h1 {
 		margin-top: auto;
 		text-align: center;
 		border: 1px solid black;
+		font-family: Georgia, serif;
 
 }
 
@@ -35,6 +36,7 @@ h1 {
 h3  {
 	margin-top: auto;
 	margin-bottom: 15px;
+
 	
 }
 
@@ -44,11 +46,18 @@ h4 {
 	
 }
 
+div {
+	font-family: Georgia, serif;
+
+}
+
  #player-one {
 
 	height: 75px;
 	background-color: red;
 	border-bottom: 1px solid black;
+
+
 	
 }
 
@@ -59,7 +68,7 @@ h4 {
 
 }
 
-section	{
+#timer	{
 	height: 100px;
 	background-color: grey;
 	border: 1px solid black;
@@ -71,5 +80,13 @@ section	{
 }
 
 
+
+#winner {
+	margin-top: 20px;
+	text-align: center;
+	font-size: 20px;
+
+
+}
 
 
