--- a/css/style.css
+++ b/css/style.css
@@ -69,24 +69,78 @@ div {
 }
 
 #timer	{
-	height: 100px;
+	height: 75px;
 	background-color: grey;
 	border: 1px solid black;
-	width: 100px;
+	width: 75px;
 	display: inline-block;
 	float: left;
 	margin-left: 20px;
 	margin-top: 100px;
-}
+	text-align: center;
+	font-size: 40px;
+	padding-top: 15px;
 
+
+
+}
 
 
 #winner {
-	margin-top: 20px;
+	margin-top: 10px;
 	text-align: center;
 	font-size: 20px;
-
+	margin-bottom: 10px;
 
 }
+
+.button{
+	background-color: coral;
+	padding: 1px 2px;
+	color: white;
+	border: 0px;
+	margin-left: 35%;
+	font-size: 15px;
+}
+
+
+.button:hover{
+	background: darkgrey;
+}
+
+
+.modal{
+	display: none;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	overflow: auto;
+	background-color: rgba(0,0,0,0.5);
+
+}
+
+.modal-content{
+	background-color: lightgrey;
+	margin: 20% auto;
+	padding: 20px;
+	width: 70%;
+	box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2);
+}
+
+.closeBtn {
+	color: darkgrey;
+	float: right;
+	font-size: 30px;
+}
+
+.closeBtn:hover, .closeBtn:focus {
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
+}
+
 
 
