--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+	/*background-image: url("https://t4.ftcdn.net/jpg/01/25/29/97/500_F_125299719_3kl36M7u1tmGIs8MGRDPtLWKeikUFi58.jpg");*/
 	background-color: white;
 }
 
@@ -7,6 +8,7 @@ body {
 	background-color: rgb(128, 128, 128);
 	display: inline-block;
 	margin-left: 100px;
+	/*margin-top: 350px;*/
 
 
 }
@@ -20,6 +22,7 @@ aside {
 	margin-left: 50px;
 	background-color: grey;
 	float: left;
+	/*margin-top: 350px;*/
 
 }
 	
@@ -143,4 +146,8 @@ div {
 }
 
 
+#start{
+
+	
+}
 
