--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ div {
 	border: 0px;
 	margin-left: 10%;
 	font-size: 15px;
+	cursor: pointer;
 }
 
 
@@ -157,6 +158,7 @@ div {
 
 #start:hover{
 	background: darkgrey;
+	cursor: pointer;
 }
 
 
