--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,34 @@ div {
 
 
 
+.modal1 {
+
+	display: none;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	overflow: auto;
+	background-color: rgba(0,0,0,0.5);
+
+}
 
 
 
+
+.modal2 {
+
+	display: none;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	overflow: auto;
+	background-color: rgba(0,0,0,0.5);
+
+}
 
