--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
-	/*background-image: url("https://t4.ftcdn.net/jpg/01/25/29/97/500_F_125299719_3kl36M7u1tmGIs8MGRDPtLWKeikUFi58.jpg");*/
-	background-color: white;
+	background-image: url("http://gamecodeschool.com/wp-content/uploads/2016/09/skyline.png");
+	/*background-color: white;*/
 }
 
 
@@ -8,10 +8,11 @@ body {
 	background-color: rgb(128, 128, 128);
 	display: inline-block;
 	margin-left: 100px;
-	/*margin-top: 350px;*/
+	margin-top: 400px;
 
 
 }
+
 
 
 aside {
@@ -22,7 +23,7 @@ aside {
 	margin-left: 50px;
 	background-color: grey;
 	float: left;
-	/*margin-top: 350px;*/
+	margin-top: 400px;
 
 }
 	
@@ -81,6 +82,7 @@ div {
 	text-align: center;
 	font-size: 40px;
 	padding-top: 15px;
+	margin-top: 400px;
 
 
 
@@ -96,9 +98,9 @@ div {
 }
 
 .button{
-	background-color: coral;
+	background-color: yellow;
 	padding: 1px 2px;
-	color: white;
+	color: black;
 	border: 0px;
 	margin-left: 10%;
 	font-size: 15px;
@@ -146,9 +148,9 @@ div {
 
 
 #start{	
-	background-color: coral;
+	background-color: yellow;
 	padding: 1px 2px;
-	color: white;
+	color: black;
 	border: 0px;
 	margin-left: 20%;
 	font-size: 15px;
