Updated rules and added background

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
-	background-image: url("http://gamecodeschool.com/wp-content/uploads/2016/09/skyline.png");
+	background-image: url("https://ak3.picdn.net/shutterstock/videos/4757393/thumb/1.jpg?i10c=img.resize(height:300)");
 	/*background-color: white;*/
+	background-size: 1000px 800px;
 }
 
 
@@ -8,7 +9,7 @@ body {
 	background-color: rgb(128, 128, 128);
 	display: inline-block;
 	margin-left: 100px;
-	margin-top: 400px;
+	margin-top: 275px;
 
 
 }
@@ -23,7 +24,7 @@ aside {
 	margin-left: 50px;
 	background-color: grey;
 	float: left;
-	margin-top: 400px;
+	margin-top: 275px;
 
 }
 	
@@ -44,8 +45,10 @@ h3  {
 }
 
 h4 {
-	margin-top: auto;
+	margin-top: 1px;
+	margin-bottom: 7px;
 	padding: none;
+
 	
 }
 
@@ -65,7 +68,7 @@ div {
 
 #player-two {
 	height: 65px;
-	background-color: blue;
+	background-color: lightblue;
 	border-bottom: 1px solid black;
 
 }
@@ -82,7 +85,7 @@ div {
 	text-align: center;
 	font-size: 40px;
 	padding-top: 15px;
-	margin-top: 400px;
+	margin-top: 275px;
 
 
 
